Version 0.11.0: XDG layout, engine self-heal, starters and jk self purge
- Product dirs follow XDG / Known Folders with binaries in ~/.local/bin
  and managed JDKs in the shared root under .jk-owned markers.
- A one-minute engine maintenance loop refreshes feeds, jk-templates,
  worker AOT and calibration every 12 h; optimize/calibrate are removed.
- jk cache is the action cache and jk repo is the CAS/store with prune;
  jk engine aot lists caches from a human-readable aot.toml index.
- jk env prints resolved environment with sources; jk self purge wipes
  product data behind a global -y; shell completions are marker-bounded.
- Giter8 short names resolve from jk-templates; starters cover Kotlin,
  Quarkus, Boot WebMVC, Ktor 3, Boot MCP, Grails 8 and Micronaut.

Tickets: JK-1184, JK-1185, JK-1186, JK-1187, JK-1189, JK-1190, JK-1191, JK-1201, JK-1285, JK-1375, JK-1380, JK-1381, JK-1385, JK-1392, JK-1393, JK-1396, JK-1401, JK-1402, JK-1403, JK-1404, JK-1405, JK-1406, JK-1407, JK-1408, JK-1409, JK-1410, JK-1412, JK-1413, JK-1414, JK-1415, JK-1416, JK-1418, JK-1419, JK-1422, JK-1423, JK-1424, JK-1425, JK-1426, JK-1427, JK-1428, JK-1429, JK-1430, JK-1431, JK-1432, JK-1433, JK-1434, JK-1435, JK-1436, JK-1437, JK-1438, JK-1439, JK-1440, JK-1441, JK-1442, JK-1443, JK-1444, JK-1445, JK-1446, JK-1447, JK-1448, JK-1450