@@ -1392,7 +1392,7 @@ public final class EngineClient {
     /**
      * Resolve a Maven-published CLI tool against the engine (the POM walk + jar fetches run
      * engine-side; see {@code ToolPipelines}). The launcher write / inheritIO exec stays in the calling
-     * command — it owns the user's {@code ~/.jk/bin} and terminal.
+     * command — it owns the user's {@code ~/.local/bin} and terminal.
      */
     public static ToolResolveOutcome runToolResolve(
             EnginePaths.Paths paths,
@@ -1490,8 +1490,9 @@ public final class EngineClient {
 
     /**
      * Everything an engine-hosted cache maintenance op needs ({@code op} = {@code prune}/{@code
-     * purge}/{@code gc} — {@code jk cache prune}/{@code purge}, {@code jk clean --cache}). {@code
-     * maxSize} may be {@code null}; the non-prune ops ignore the prune-only fields.
+     * purge}/{@code sweep}/{@code gc} — {@code jk cache prune}/{@code purge}, {@code jk repo
+     * prune}, {@code jk clean --cache}). {@code maxSize} may be {@code null}; ops ignore the
+     * fields they don't use.
      */
     public record CacheMaintRequest(
             String op,
@@ -1763,15 +1764,38 @@ public final class EngineClient {
     /**
      * AOT mode for a target: only a JAR engine on a HotSpot JDK with no {@code.noaot} marker uses
      * AOT. Train-on-miss is skipped when {@link cc.jumpkick.util.AotSettings#trainingEnabled} is
-     * false ({@code JK_AOT_TRAIN=off}) — still maps an existing cache.
+     * false ({@code JK_AOT_TRAIN=off}) — still maps an existing cache. USE requires a
+     * <em>non-empty</em> cache (mirror of {@code PluginAot.usableCache}): a zero-byte leftover from
+     * a crashed trainer would otherwise map "forever" while never accelerating anything — it is
+     * deleted here so the key can retrain.
      */
     static AotMode chooseAotMode(EngineTarget t) {
         if (t.engine().kind() != EngineArtifact.Kind.JAR) return AotMode.NONE;
         if (!t.hotspot()) return AotMode.NONE; // GraalVM host: its Graal JIT breaks the cache — skip cleanly
         if (t.noAotMarker()) return AotMode.NONE;
-        if (t.aotCache() != null && Files.exists(t.aotCache())) return AotMode.USE;
+        if (usableAotCache(t.aotCache())) return AotMode.USE;
+        deleteIfEmptyCache(t.aotCache()); // torn/zero-byte leftover: treat as missing so it retrains
         if (!cc.jumpkick.util.AotSettings.trainingEnabled()) return AotMode.NONE;
         return AotMode.TRAIN;
+    }
+
+    /** The one definition of "engine cache present": a non-empty regular file. */
+    private static boolean usableAotCache(Path cache) {
+        try {
+            return cache != null && Files.isRegularFile(cache) && Files.size(cache) > 0;
+        } catch (IOException e) {
+            return false;
+        }
+    }
+
+    private static void deleteIfEmptyCache(Path cache) {
+        try {
+            if (cache != null && Files.isRegularFile(cache) && Files.size(cache) == 0) {
+                Files.deleteIfExists(cache);
+            }
+        } catch (IOException ignored) {
+            // best-effort
+        }
     }
 
     /**
@@ -1884,7 +1908,7 @@ public final class EngineClient {
     /**
      * Which engine artifact a spawn chose. {@code EXE}: {@code path} is an executable whose {@code
      * main} IS the engine loop. {@code JAR}: {@code path} is the engine's fat jar ({@code
-     * ~/.jk/versions/<v>/lib/jk-engine.jar}), launched as {@code <managed-jdk>/bin/java … -cp <path>
+     * ~/.local/share/jk/versions/<v>/lib/jk-engine.jar}), launched as {@code <managed-jdk>/bin/java … -cp <path>
      * cc.jumpkick.engine.EngineMain} — the engine is a plain JVM app, never a native image. There is
      * no client-binary FALLBACK: the slim client never hosts the engine.
      */
@@ -1897,7 +1921,7 @@ public final class EngineClient {
 
     /**
      * Engine artifact resolution: (a) {@code JK_ENGINE_EXE}; (b) {@code
-     * ~/.jk/versions/<v>/lib/jk-engine.jar}. Empty when neither is available (caller may download /
+     * ~/.local/share/jk/versions/<v>/lib/jk-engine.jar}. Empty when neither is available (caller may download /
      * materialize, then retry).
      */
     static Optional<EngineArtifact> resolveEngineArtifact(String envOverride, String version) {
@@ -1952,8 +1976,8 @@ public final class EngineClient {
                                 ? "no-jdk"
                                 : jdk.version() + "|" + jdk.vendor().name());
         String hash = cc.jumpkick.util.Hashing.sha256Hex(signature.toString()).substring(0, 16);
-        // ONE home for every AOT cache — engine and workers alike live in ~/.jk/state/aot/ so a
-        // user (or a future `jk cache info`) finds them all side by side. The engine's file
+        // ONE home for every AOT cache — engine and workers alike live in ~/.local/state/jk/aot/ so a
+        // user (or `jk engine aot`) finds them all side by side. The engine's file
         // carries its jk version ("engine-<version>-<key>.aot") because its LIFETIME is
         // version-scoped: VersionStore.prune retires a version's caches with the version, and
         // the sweep below stays within one version so side-by-side installs never thrash
@@ -1970,22 +1994,82 @@ public final class EngineClient {
         // intermediate, and any ".noaot" marker. The "<16-hex>." shape check keeps a version
         // whose name extends ours ("0.10.0" vs "0.10.1") out of the blast radius.
         String versionPrefix = "engine-" + version + "-";
+        List<String> swept = new ArrayList<>();
         try (var entries = Files.newDirectoryStream(aotDir, "engine-*")) {
             for (Path p : entries) {
                 String name = p.getFileName().toString();
                 if (name.startsWith(versionPrefix)
                         && !name.startsWith(stem)
                         && name.substring(versionPrefix.length()).matches("[0-9a-f]{16}\\..*")) {
+                    // Map sidecar names back to the primary .aot file key for aot.toml.
+                    if (name.endsWith(".aot")) swept.add(name);
+                    else if (name.endsWith(".noaot") && name.length() > ".noaot".length()) {
+                        String primary = name.substring(0, name.length() - ".noaot".length()) + ".aot";
+                        swept.add(primary);
+                    }
                     Files.deleteIfExists(p);
                 }
             }
         } catch (IOException ignored) {
             // Cleanup is opportunistic; a leftover cache costs disk, not correctness.
         }
+        if (!swept.isEmpty()) {
+            cc.jumpkick.util.AotManifest.remove(aotDir, swept);
+            cc.jumpkick.util.AotManifest.reconcile(aotDir);
+        }
+        recordEngineAotManifest(cache, engineJar, jdk, version, hash);
         // Pre-1.0 migration: the cache used to live in <engine-state>/<version>/ — retire that
         // dir so nobody plays hide-and-seek with stale copies. Remove once 1.0 ships.
         deleteRecursivelyQuietly(paths.dir().resolve(version));
         return cache;
+    }
+
+    /**
+     * Best-effort {@code aot.toml} row for the engine cache key (even before the file exists, so a
+     * pending train is still documented). Updates size/status when the cache or {@code .noaot}
+     * marker is present. {@code ready} means size &gt; 0 — the same predicate {@link
+     * #chooseAotMode} maps by, so the manifest and the engine never disagree about one file.
+     */
+    static void recordEngineAotManifest(
+            Path cache, Path engineJar, EngineJdk jdk, String version, String hash) {
+        if (cache == null) return;
+        Path aotDir = cache.getParent();
+        if (aotDir == null) return;
+        try {
+            String name = cache.getFileName().toString();
+            boolean ready = Files.isRegularFile(cache) && Files.size(cache) > 0;
+            boolean noaot = Files.exists(noAotMarkerPath(cache));
+            String status = ready ? "ready" : (noaot ? "noaot" : "pending");
+            var b = cc.jumpkick.util.AotManifest.Entry.builder(name)
+                    .tool("engine")
+                    .key(hash)
+                    .jkVersion(version)
+                    .status(status)
+                    .jvmFlags(List.of(
+                            "-XX:+UseSerialGC",
+                            "--enable-native-access=ALL-UNNAMED"));
+            if (ready) {
+                b.sizeBytes(Files.size(cache)).lastUsed(cc.jumpkick.util.AotManifest.nowIso());
+            }
+            if (jdk != null) {
+                b.jdkHome(jdk.home().toString())
+                        .jdkVendor(jdk.vendor().name())
+                        .jdkVersion(jdk.version())
+                        .gc("serial");
+            }
+            if (engineJar != null) {
+                b.engineJar(engineJar.getFileName().toString());
+                try {
+                    b.engineJarSize(Files.size(engineJar))
+                            .engineJarMtimeMs(Files.getLastModifiedTime(engineJar).toMillis());
+                } catch (IOException ignored) {
+                    // identity without size/mtime still documents the name
+                }
+            }
+            cc.jumpkick.util.AotManifest.upsert(aotDir, b.build());
+        } catch (Exception ignored) {
+            // never fail engine start for a human index
+        }
     }
 
     private static void deleteRecursivelyQuietly(Path root) {
@@ -2055,13 +2139,16 @@ public final class EngineClient {
                 }
                 // Forward plugin-jar location overrides (e.g. -Djk.test.runner.jar=… from Gradle
                 // tests) into the engine JVM — PluginJar.locate reads System.getProperty there.
-                // Also forward AOT switches so nested engines honor JK_AOT_TRAIN / jk.aot.train.
+                // Also forward AOT switches so nested engines honor JK_AOT_TRAIN / jk.aot.train,
+                // and jk.env.* layout overlays (JkDirs test seam) so a spawned engine resolves the
+                // same store/state the client did (JK-1450).
                 for (var e : System.getProperties().entrySet()) {
                     String key = String.valueOf(e.getKey());
                     if (!key.startsWith("jk.")) continue;
                     boolean jarOverride = key.endsWith(".jar");
                     boolean aotSwitch = key.equals("jk.aot.train") || key.equals("jk.worker.aot");
-                    if (!jarOverride && !aotSwitch) continue;
+                    boolean envOverlay = key.startsWith("jk.env.");
+                    if (!jarOverride && !aotSwitch && !envOverlay) continue;
                     String val = String.valueOf(e.getValue());
                     if (val == null || val.isBlank()) continue;
                     command.add("-D" + key + "=" + val);
@@ -2115,7 +2202,7 @@ public final class EngineClient {
      *
      * <p>A daemon does not inherit the client's environment, so anything set only in the caller's shell
      * is invisible to it. That is why {@code JK_STORE_DIR} did nothing beforethe engine
-     * resolved its own {@code ~/.jk/store} regardless. Paired with the store being part of the engine
+     * resolved its own {@code ~/.local/share/jk/store} regardless. Paired with the store being part of the engine
      * identity ({@link cc.jumpkick.engine.EnginePaths}), a different store now both spawns its own
      * engine and reaches it.
      */
